# kaggle-titanic

./: analysis.ipynb  pyproject.toml  submission.csv
