[tool.poetry]
name = "kaggle-titanic"
version = "0.1.0"
description = "A Kaggle Titanic project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
matplotlib = ">=3.7.3"

seaborn = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"